--- a/StripePortfolio/Views/Cart/Index.cshtml
+++ b/StripePortfolio/Views/Cart/Index.cshtml
@@ -30,13 +30,12 @@
             cart.items.forEach(item => {
                 
                 const li = document.createElement("li");
-                // li.textContent = `${item.productName} - $${item.unitPrice.toFixed(2)} x ${item.quantity} = $${item.totalPrice.toFixed(2)}`;
-  //                  li.innerHTML = `
-  //      ${item.productName} - $${item.unitPrice.toFixed(2)} x ${item.quantity}
-  //      = $${item.totalPrice.toFixed(2)}
-  //      <button onclick="removeItem(${item.productId})">Remove</button>
-  //  `;
+             
       li.innerHTML = `
+      <span id="name-${item.productId}" style="display:none;">${item.productName}</span>
+      <span id="qty-hidden-${item.productId}" style="display:none;">
+        ${item.quantity}
+    </span>
         ${item.productName} - $${item.unitPrice.toFixed(2)}
         <br>
         Qty:
@@ -63,15 +62,7 @@
 
     // Call the function on page load
     loadCart();
-        // async function checkoutCart() {
-        // const res = await fetch('/api/checkout/create', {
-        //     method: 'POST',
-        //     headers: { 'Content-Type': 'application/json' },
-        //     body: JSON.stringify({ useServerCart: true }) tell backend to use logged-in cart
-        // });
-       //   const data = await res.json();
-      //    window.location = data.url; // redirect to Stripe checkout
-    //  }
+       
             async function checkoutCart() {
         const res = await fetch('/api/cart/my-cart');
         const cart = await res.json();
@@ -96,18 +87,57 @@
 
         
         async function removeItem(productId) {
-        if (!confirm("Remove this item from your cart?")) return;
+        //if (!confirm("Remove this item from your cart?")) return;
+         const productName = document.getElementById(`name-${productId}`).innerText;
+            Swal.fire({
+      title: `Removing ${productName} from cart?`,
+      text: "You won't be able to revert this!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, remove it!"
+    }).then(async (result) => {
+      if (result.isConfirmed) {
+             const res = await fetch(`/api/cart/remove/${productId}`, {
+             method: "DELETE"
+         });
+         if(res.ok){
+                Swal.fire({
+                    title: "Removed!",
+                    text: "Item has been removed from the cart.",
+                    icon: "success",
+                    timer: 1500,
+                    showConfirmButton: false
+                });
 
-        const res = await fetch(`/api/cart/remove/${productId}`, {
-            method: "DELETE"
-        });
+                loadCart();
+         }else{
+              Swal.fire({
+                    title: "Error",
+                    text: "Failed to remove item.",
+                    icon: "error"
+                });
+         }
+      }
+    });
+      //   const res = await fetch(`/api/cart/remove/${productId}`, {
+      //       method: "DELETE"
+      //   });
 
-        if (!res.ok) {
-            alert("Failed to remove item");
-            return;
-        }
+      //   if (!res.ok) {
+      //               Swal.fire({
+      //     toast: true,
+      //     position: "top-end",
+      //     icon: "error",
+      //     title: "Failed to remove",
+      //     showConfirmButton: false,
+      //     timer: 1500
+      // });
+      //       return;
+      //   }
 
-        loadCart(); // refresh cart
+      //   loadCart(); 
 
     }
         async function clearCart() {
@@ -118,18 +148,40 @@
         });
 
         if (!res.ok) {
-            alert("Failed to clear cart");
+                     Swal.fire({
+          toast: true,
+          position: "top-end",
+          icon: "error",
+          title: "Fail to clear cart",
+          showConfirmButton: false,
+          timer: 1500
+      });
             return;
         }
-
+                 Swal.fire({
+          toast: true,
+          position: "top-end",
+          icon: "success",
+          title: "Cart content cleared",
+          showConfirmButton: false,
+          timer: 1500
+      });
         loadCart(); // refresh
     }
         async function updateQuantity(productId) {
         const qtyInput = document.getElementById(`qty-${productId}`);
         const newQty = parseInt(qtyInput.value);
-
+        const productName = document.getElementById(`name-${productId}`).innerText;
+        const oldQty = parseInt(document.getElementById(`qty-hidden-${productId}`).innerText);
         if (newQty <= 0) {
-            alert("Quantity must be at least 1");
+                     Swal.fire({
+          toast: true,
+          position: "top-end",
+          icon: "error",
+          title: "Quantity must at least 1",
+          showConfirmButton: false,
+          timer: 1500
+      });
             return;
         }
 
@@ -143,10 +195,23 @@
         });
 
         if (!res.ok) {
-            alert("Failed to update quantity");
+                     Swal.fire({
+          toast: true,
+          position: "top-end",
+          icon: "error",
+          title: "Failed to update quantity",
+          showConfirmButton: false,
+          timer: 1500
+      });
             return;
         }
-
+          Swal.fire({
+          title: "Success",
+          text:   `${productName} quantity updated from ${oldQty} to ${newQty}`,
+          icon: "success",
+         // timer: 1500,
+        //  showConfirmButton: true
+      });
         loadCart(); // refresh cart
     }
 
