--- a/StripePortfolio/Views/Shared/_Layout.cshtml
+++ b/StripePortfolio/Views/Shared/_Layout.cshtml
@@ -33,6 +33,33 @@
                         </li>
                          
                     </ul>
+                    <div class="btn-group">
+                        <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Grand Archive
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="Cards" asp-action="Index">Cards</a>
+                               
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="CardTypes" asp-action="Index">CardType</a>
+
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="Elements" asp-action="Index">Elements</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="Rarities" asp-action="Index">Rarities</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="Sets" asp-action="Index">Sets</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="Subtypes" asp-action="Index">Subtypes</a>
+                            </li>
+                        </ul>
+                    </div>
                     <partial name="_LoginPartial" />
 
                 </div>
@@ -53,6 +80,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
