--- a/StripePortfolio/Areas/GrandArchive/Views/Sets/Details.cshtml
+++ b/StripePortfolio/Areas/GrandArchive/Views/Sets/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model StripePortfolio.Areas.GrandArchive.Models.Set
+﻿@model StripePortfolio.Areas.GrandArchive.Models.CardSet
 
 @{
     ViewData["Title"] = "Details";
