--- a/StripePortfolio/Areas/GrandArchive/Views/Sets/Index.cshtml
+++ b/StripePortfolio/Areas/GrandArchive/Views/Sets/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StripePortfolio.Areas.GrandArchive.Models.Set>
+﻿@model IEnumerable<StripePortfolio.Areas.GrandArchive.Models.CardSet>
 
 @{
     ViewData["Title"] = "Index";
