--- a/StripePortfolio/Views/Shared/_Layout.cshtml
+++ b/StripePortfolio/Views/Shared/_Layout.cshtml
@@ -33,7 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="History" asp-action="Index">History</a>
                         </li>
-                         
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CardInventories" asp-action="Index">Card Inventory</a>
+                        </li>
                     </ul>
                     <div class="btn-group">
                         <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,6 +62,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="GrandArchive" asp-controller="Subtypes" asp-action="Index">Subtypes</a>
                             </li>
+                           
                         </ul>
                     </div>
                     <partial name="_LoginPartial" />
